[project]
name = "Melodfy"
version = "0.1.1"
requires-python = ">=3.11.2"
dependencies = [
    "audioread==3.0.1",
    "Cython==3.0.8",
    "librosa==0.9.2",
    "mido==1.3.2",
    "numpy==1.24.3",
    "onnxruntime==1.15.0",
    "PySide6==6.6.2",
    "PySide6_Addons==6.6.2",
    "PySide6_Essentials==6.6.2",
    "QtAwesome==1.3.0",
    "setuptools==67.8.0",
]
authors = [{ name = "Hemant Kumar",email="iamhemantindia@protonmail.com"}]
description = "Melodfy✨: AI-Powered Piano Audio to MIDI Converter 🎶"
readme = "README.md"
license = { text = "MIT License" }
keywords = ["piano", "audio", "midi", "converter", "ai", "music", "melodfy", "melody", "melodify","audio-to-midi","qt","pyside6"]


